# VoxelEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/map/: testLevel.map  testLevel3D.map
assets/shaders/: default.frag  default.vert
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
src/core/: Camera.cpp  Camera.h  Input.cpp  Input.h  Raycast.cpp  Raycast.h  Window.cpp  Window.h
src/debug/: Crosshair.cpp  Crosshair.h  TargetOutline.cpp  TargetOutline.h
src/map/: MapData.cpp  MapData.h  MapLoader.cpp  MapLoader.h
src/render/: Mesh.cpp  Mesh.h  Render.cpp  Render.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/voxel/: Chunk.cpp  Chunk.h  ChunkController.cpp  ChunkController.h  Voxel.cpp  Voxel.h  VoxelData.cpp  VoxelData.h  VoxelMeshGenerator.cpp  VoxelMeshGenerator.h
